# sapling

./: .eslintrc  .gitignore  .npmrc  .yarnrc.yml  Cargo.toml  justfile  lerna.json  package.json  todo.md  tsconfig.base.json
.github/workflows/: publish.yml
apps/example/: .eslintrc  package.json  tsconfig.json
apps/example/src/: main.ts  main.tsx
apps/web/: package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
crates/sapling_transformer/: Cargo.toml  tsconfig.json
crates/sapling_transformer/src/: bit_mask.rs  lib.rs  transformer.rs
crates/sapling_transformer/src/helpers/: expr_chain.rs  jsx_element_name_to_string.rs  make_array.rs  make_arrow_function_from_statements.rs  make_create_component.rs  make_create_element.rs  make_create_jsx_tag_element.rs  make_create_text_node.rs  make_effect.rs  make_insert.rs  make_insert_node.rs  make_props_obj.rs  make_set_prop.rs  mod.rs  string_tree.rs
crates/sapling_transformer/src/helpers/snapshots/: sapling_transformer__helpers__make_create_component__make_create_component.snap  sapling_transformer__helpers__make_create_element__make_create_element.snap  sapling_transformer__helpers__make_create_text_node__make_create_text_node.snap  sapling_transformer__helpers__make_props_obj__make_props_obj_empty.snap
crates/sapling_transformer/src/scope/: mod.rs
crates/sapling_transformer/src/transform_any_js_expression/: mod.rs
crates/sapling_transformer/src/transform_any_js_function_body/: mod.rs
crates/sapling_transformer/src/transform_any_js_module_item/: mod.rs
crates/sapling_transformer/src/transform_any_js_object_member/: mod.rs
crates/sapling_transformer/src/transform_any_js_statement/: mod.rs
crates/sapling_transformer/src/transform_any_jsx_child/: mod.rs
crates/sapling_transformer/src/transform_js_function_body/: mod.rs
crates/sapling_transformer/src/transform_js_variable_declarator/: mod.rs
crates/sapling_transformer/src/transform_jsx_tag_expression_to_statements/: mod.rs
crates/sapling_transformer/src/transfrom_jsx_tag_expression/: mod.rs
crates/sapling_transformer/tests/: expr_chain.rs  jsx.rs  jsx_attr.rs  jsx_self_close.rs  scope_text_range.rs  test_utils.rs  transform.rs
crates/sapling_transformer/tests/snapshots/: transform__counter_tsx.snap.new
crates/sapling_transformer/tests/specs/: benchmark.tsx  benchmark.tsx.snap  benchmark.tsx.snap.new  counter.tsx  counter.tsx.chain.snap  counter.tsx.chain.snap.new  counter.tsx.snap  counter.tsx.snap.new  for.tsx  fragments.tsx.snap  jsx_attr.tsx.snap  jsx_expr.tsx.snap  jsx_self_close.tsx  jsx_self_close.tsx.snap  simple_element.tsx  simple_element.tsx.snap  todo_list.tsx  todo_list.tsx.snap
crates/sapling_transformer/tests/specs/classes/: counter.tsx
crates/sapling_transformer/tests/specs/fragments/: index.tsx
crates/sapling_transformer/tests/specs/jsx_attr/: index.tsx.snap
crates/sapling_transformer/tests/specs/jsx_expr/: index.tsx.snap
crates/sapling_transformer/tests/specs/simple_elements/: index.tsx  index.tsx.snap
docs/: README.md  README.tsx  jsx_template_analysis_summary.md  jsx_template_architecture_diagram.md  jsx_template_function_call_graph.md  solidjs_transformer.md  todo.md  使用说明.md
docs/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
docs/zh-CN/: createElement.md  reactive.md  why.md
examples/app/src/: App.tsx
examples/array-test/: package.json  vite.config.ts
examples/array-test/src/: main.tsx
examples/basic-render/: .eslintrc  package.json
examples/basic-render/src/: App.tsx  main.tsx
examples/benchmark/: index.html  package.json  vite.config.ts
examples/benchmark/src/: App.tsx  For.ts  createComponent.ts  createElement.ts  createJsxTagElement.ts  createRoot.ts  createTextNode.ts  derive.ts  effect.ts  insert.ts  insertNode.ts  lib.ts  main.ts  main.tsx  memo.ts  (+3 more)
examples/count/: package.json
examples/counter/: package.json  tsconfig.json
examples/hidden-count/: package.json  tsconfig.json
examples/nested-test/: index.html  package.json
examples/proxy-call/: package.json  tsconfig.json
examples/radom-list/: .eslintrc  package.json
examples/random-list/: package.json  vite.config.ts
examples/todo/: package.json  tsconfig.json
examples/unmount/: package.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+22 files in other folders)
