[workspace]
resolver = "2"
members = ["crates/sapling_transformer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
insta = "1.34.0"
biome_js_syntax = { git = "https://github.com/biomejs/biome.git", package = "biome_js_syntax", tag = "@biomejs/biome@2.1.4" }
biome_js_parser = { git = "https://github.com/biomejs/biome.git", package = "biome_js_parser", tag = "@biomejs/biome@2.1.4" }
biome_rowan = { git = "https://github.com/biomejs/biome.git", package = "biome_rowan", tag = "@biomejs/biome@2.1.4" }
biome_js_formatter = { git = "https://github.com/biomejs/biome.git", package = "biome_js_formatter", tag = "@biomejs/biome@2.1.4" }
biome_js_factory = { git = "https://github.com/biomejs/biome.git", package = "biome_js_factory", tag = "@biomejs/biome@2.1.4" }
biome_formatter = { git = "https://github.com/biomejs/biome.git", package = "biome_formatter", tag = "@biomejs/biome@2.1.4" }
biome_js_semantic = { git = "https://github.com/biomejs/biome.git", package = "biome_js_semantic", tag = "@biomejs/biome@2.1.4" }
camino = "1.1.11"
