[package]
name = "sapling_transformer"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biome_js_syntax = { workspace = true }
biome_js_parser = { workspace = true }
biome_rowan.workspace = true
insta = { workspace = true }
camino = { workspace = true }
biome_js_formatter = { workspace = true }
biome_js_factory.workspace = true
biome_formatter = { workspace = true }
biome_js_semantic = { workspace = true }
wasm-bindgen = "0.2.100"
